--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,8 @@ edition = "2021"
 deno_ast = "0.44.0"
 deno_core = "0.326.0"
 tokio = { version = "1.42.0", features = ["full"] }
+serde = "1.0"
+serde_json = "1.0"
 
 #[profile.dev]
 #opt-level = "z"
