--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,11 +4,13 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-deno_ast = "0.44.0"
 deno_core = "0.326.0"
 tokio = { version = "1.42.0", features = ["full"] }
 serde = "1.0"
 serde_json = "1.0"
+deno_ast = { version = "0.42", features = ["transpiling"] }
+data-url = "0.3.1"
+reqwest = "0.12.12"
 
 #[profile.dev]
 #opt-level = "z"
