--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,9 @@ serde_json = "1.0"
 deno_ast = { version = "0.42", features = ["transpiling"] }
 data-url = "0.3.1"
 reqwest = "0.12.12"
+anyhow = "1.0.95"
+ureq = "3.0.4"
+http = "1.2.0"
 
 #[profile.dev]
 #opt-level = "z"
